--- a/index.html
+++ b/index.html
@@ -143,20 +143,22 @@ composer update</code></pre>
 <h2>JavaScriptのビルド</h2>
 <code class="com">npm run dev</code>
 
-<h1>制作</h1>
-<p>作成する各ファイルの内容は<a href="https://www.sejuku.net/plus/programs/11/chapters/130">教材</a>参照</p>
+<h1>テンプレート作成</h1>
 
 <h2>layouts作成</h2>
 <p>resources/views/layoutsディレクトリ作成</p>
 <p>app.blade.php作成</p>
 
-<h2>初期設定を変更</h2>
-<p>resources/views/welcome.blade.php変更</p>
-
 <h2>components作成</h2>
 <p>resources/views/componentsディレクトリ作成</p>
-<p>header.blade.php作成</p>
-<p>footer.blade.php作成</p>
-<p>flash.blade.php作成</p>
+<h3>おすすめのコンポーネント</h3>
+<p>header.blade.php</p>
+<p>footer.blade.php</p>
+
+<h2>最初の画面のビューを調整</h2>
+<p>resources/views/welcome.blade.php</p>
+
+<h1>ログイン認証</h1>
+<p>app/Providers/AppServiceProvider.php</p>
 </body>
 </html>
