--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
 
 <h1>導入</h1>
 <h2>アプリ作成</h2>
-<code class="com">composer create-project --prefer-dist laravel/laravel <span class="var">appName</span></code>
+<pre><code class="com">composer create-project --prefer-dist laravel/laravel <span class="var">appName</span>
+cd <span class="var">appName</span></code></pre>
 <p>.envというファイルのデータベース情報部分を編集します。</p>
 <p>もともとこうなっています</p>
 <pre><code>DB_CONNECTION=mysql
