npm-check-updatesのインストールを追記

--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@ npm install sass --save
 npm install sass-loader --save
 npm install vue --save
 npm install vue-loader --save
+npm install -g npm-check-updates
 npm-check-updates -u
 npm update</code></pre>
 
